@@ -1049,6 +1049,9 @@ class POEntry(_BaseEntry):
     def __ne__(self, other):
         return self.__cmp__(other) != 0
 
+    def __hash__(self):
+        return hash((self.msgid, self.msgstr))
+
     def translated(self):
         """
         Returns ``True`` if the entry has been translated or ``False``
