@@ -6,6 +6,7 @@ from rosetta.conf import settings as rosetta_settings
 import hashlib
 import time
 import six
+import django
 
 
 cache = get_cache(rosetta_settings.ROSETTA_CACHE_NAME)
@@ -43,6 +44,12 @@ class DummyRosettaStorage(BaseRosettaStorage):
 
 
 class SessionRosettaStorage(BaseRosettaStorage):
+    def __init__(self, request):
+        super(SessionRosettaStorage, self).__init__(request)
+
+        if 'signed_cookies' in settings.SESSION_ENGINE and django.VERSION[1] >= 6 and 'pickle' not in settings.SESSION_SERIALIZER.lower():
+            raise ImproperlyConfigured("Sorry, but django-rosetta doesn't support the `signed_cookies` SESSION_ENGINE in Django >= 1.6, because rosetta specific session files cannot be serialized.")
+
     def get(self, key, default=None):
         if key in self.request.session:
             return self.request.session[key]
